# docs/swagger.json
@@ -51,14 +51,6 @@
                 },
                 "type": "object"
             }
-        },
-        "securitySchemes": {
-            "bearer": {
-                "description": "JWT authorization header. Use Bearer \u003ctoken\u003e.",
-                "in": "header",
-                "name": "Authorization",
-                "type": "apiKey"
-            }
         }
     },
     "info": {
@@ -258,11 +250,6 @@
                         "description": "Internal Server Error"
                     }
                 },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ],
                 "summary": "Get file by ID",
                 "tags": [
                     "files"
